fix wrap issue with country select

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -20,7 +20,12 @@ a {
 }
 
 .input-group {
-  // flex-wrap: nowrap !important;
+  flex-wrap: nowrap !important;
+}
+
+select {
+  width: 100%;
+  min-width: 100%;
 }
 
 .middleman-logo {
